<resources>
    <string name="app_name">QFree-Facilitator</string>
    <string name="facility_id">59b96ce401fc4d2a0c7ea188</string>
    <string name="login_button">Login</string>
    <string name="btn_run_queue">Run queue</string>
    <string name="btn_cancel_queue">Cancel</string>
    <string name="btn_dequeue_customer">Dequeue</string>
    <string name="btn_enqueue_customer">Enqueue</string>
    <string name="lbl_front">Front</string>
    <string name="lbl_rear">Rear</string>
    <string name="lbl_next_customer">Next</string>
    <string name="btn_new_queue">Add Queue</string>
    <string name="et_queue_name">Queue Name</string>
    <string name="btn_add_queue">Add</string>
</resources>
