<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qfree.qfree_facilitator.activity.QueueActivity">

    <TextView
        android:id="@+id/tv_queue_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.016"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_run_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onBtnRunQueueClick"
        android:text="@string/btn_run_queue"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/rv_customers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btn_enqueue_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onBtnEnqueueClick"
        android:text="@string/btn_enqueue_customer"

        app:layout_constraintBaseline_toBaselineOf="@+id/btn_dequeue_customer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_dequeue_customer"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.477" />

    <Button
        android:id="@+id/btn_dequeue_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnDequeueClick"
        android:text="@string/btn_dequeue_customer"

        app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel_queue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btn_cancel_queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:onClick="onBtnCancelQueueClick"
        android:text="@string/btn_cancel_queue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_dequeue_customer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_customers"
        app:layout_constraintVertical_bias="0.719"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.545" />

    <TextView
        android:id="@+id/lbl_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_front"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/btn_run_queue"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_front" />

    <TextView
        android:id="@+id/lbl_rear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_rear"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/btn_run_queue"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_rear" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_customers"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_queue_name"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tv_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lbl_front"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_rear"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_rear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lbl_rear"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_customers"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.593" />

    <TextView
        android:id="@+id/lbl_next_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_next_customer"
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_enqueue_customer"
        app:layout_constraintHorizontal_bias="0.06"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_customers"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/tv_next_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/lbl_next_customer"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_customers"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_enqueue_customer"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintVertical_bias="0.514" />

</android.support.constraint.ConstraintLayout>
